// Vitest Snapshot v1, https://vitest.dev/guide/snapshot.html

exports[`NumberField > when no value provided > renders input with value of empty string 1`] = `
<div
  class="tw:relative tw:border tw:border-[var(--color-border)] tw:rounded-[var(--radius-lg)] tw:bg-[var(--color-surface)] tw:transition-colors"
>
  <label
    class="tw:absolute tw:-top-2 tw:left-3 tw:px-1 tw:bg-[var(--color-surface)] tw:text-xs tw:font-medium tw:text-[var(--color-text-secondary)]"
    for="testName"
  >
    testLabel
  </label>
  <input
    class="tw:w-full tw:h-11 tw:px-4 tw:bg-transparent tw:border-0 tw:outline-none tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30"
    id="testName"
    name="testName"
    type="number"
    value=""
  />
</div>
`;

exports[`NumberField > when value provided > renders input with value 1`] = `
<div
  class="tw:relative tw:border tw:border-[var(--color-border)] tw:rounded-[var(--radius-lg)] tw:bg-[var(--color-surface)] tw:transition-colors"
>
  <label
    class="tw:absolute tw:-top-2 tw:left-3 tw:px-1 tw:bg-[var(--color-surface)] tw:text-xs tw:font-medium tw:text-[var(--color-text-secondary)]"
    for="testName"
  >
    testLabel
  </label>
  <input
    class="tw:w-full tw:h-11 tw:px-4 tw:bg-transparent tw:border-0 tw:outline-none tw:text-base tw:transition-colors tw:focus:outline-none tw:focus:ring-2 tw:focus:ring-[var(--color-primary)]/30"
    id="testName"
    name="testName"
    type="number"
    value="1"
  />
</div>
`;
